crates/but-api-macros/tests/tests/ui/fail/napi_list_attr_unsupported.stderr
error: unexpected token
 --> tests/ui/fail/napi_list_attr_unsupported.rs:9:15
  |
9 | #[but_api(napi, try_from = json::HexHash)]
  |               ^
